# earlybird

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  release-please-config.json  tailwind.config.js
.claude/: launch.json
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml
app/: app_config.py  auth.py  config.py  database.py  gmail_auth.py  main.py  models.py  scheduler.py  tracing.py
app/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
app/pipeline/: ingest.py  process.py  publish.py
app/pipeline/agents/: __init__.py  editor.py  parsing.py  pipeline.py  reporter.py  types.py
app/pipeline/sources/: __init__.py  base.py  gmail.py
app/routers/: api.py  auth.py  ui.py
app/tts/: elevenlabs_provider.py  factory.py  openai_provider.py
migrations/: env.py
migrations/versions/: 5cf957bd71bb_add_episode_headlines_to_episodes.py  a1b2c3d4e5f6_drop_abs_episode_id.py  b7d2e9f4c1a3_drop_podcast_script_from_episodes.py  d915e1afd957_initial_schema.py
static/: site.webmanifest
templates/: base.html  dashboard.html  episode_detail.html  episodes.html  run_detail.html  run_log.html  settings.html  sources.html
templates/auth/: change_password.html  login.html  signup.html
templates/partials/: audio_widget.html  last_run.html  run_detail_content.html  run_log_tbody.html
tests/: conftest.py  test_api.py  test_app_config.py  test_auth.py  test_change_password.py  test_placeholder.py  test_scheduler.py  test_tracing.py  test_ui.py
tests/llm/: test_anthropic_provider.py  test_factory.py  test_openai_provider.py
tests/pipeline/: test_ingest.py  test_process.py  test_publish.py
tests/pipeline/agents/: test_editor.py  test_pipeline.py  test_reporter.py
tests/pipeline/sources/: test_gmail.py
tests/tts/: test_elevenlabs_provider.py  test_openai_tts_provider.py
