[project]
name = "earlybird"
version = "0.12.0"
description = "Personal newsletter aggregator and podcast generator"
authors = [{ name = "Toby Such" }]
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "anthropic>=0.30.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.3.1",
    "openai>=1.40.0",
    "elevenlabs>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "itsdangerous>=2.0",
    "markdown>=3.10.2",
    "alembic>=1.13.0",
    "mlflow-tracing>=3.11.1",
    "mutagen>=1.47.0",
]

[project.urls]
Repository = "https://github.com/TobySuch/earlybird"
Changelog = "https://github.com/TobySuch/earlybird/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
